--- a/Math.Compu/Matriz3x3.html
+++ b/Math.Compu/Matriz3x3.html
@@ -40,6 +40,22 @@
                 Calculando sistema linear...
             </div>
 
+                        <!-- Resultado das Matrizes -->
+            <div id="matrizesContainer">
+                <div>
+                    <h3>Matriz Inicial:</h3>
+                    <pre id="matrizInicialDisplay"></pre>
+                </div>
+                <div>
+                    <h3>Segunda Matriz (após eliminação L1):</h3>
+                    <pre id="segundaMatrizDisplay"></pre>
+                </div>
+                <div>
+                    <h3>Terceira Matriz (após eliminação L2):</h3>
+                    <pre id="terceiraMatrizDisplay"></pre>
+                </div>
+            </div>
+
             <div class="resultado-container" id="resultadoContainer">
                 <div class="resultado-title">✅ Solução do Sistema Linear</div>
                 <div class="resultado-valores">
